Added link to youtube

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                 <a href="https://www.facebook.com/neverbrainapp/" class="btn btn-default btn-lg" target="_blank"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
                             </li>
                             <li>
-                                <a href="https://www.linkedin.com/company/never-brain" class="btn btn-default btn-lg" target="_blank"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                                <a href="https://www.youtube.com/channel/UCLvSe2NmvLpcIY4z1XBlhJA" class="btn btn-default btn-lg" target="_blank"><i class="fa fa-youtube fa-fw"></i> <span class="network-name">Youtube</span></a>
                             </li>
                         </ul>
                     </div>
@@ -194,7 +194,7 @@
                                 <a href="https://www.facebook.com/neverbrainapp/" class="btn btn-default btn-lg" target="_blank"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
                             </li>
                             <li>
-                                <a href="https://www.linkedin.com/company/never-brain" class="btn btn-default btn-lg" target="_blank"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                                <a href="https://www.youtube.com/channel/UCLvSe2NmvLpcIY4z1XBlhJA" class="btn btn-default btn-lg" target="_blank"><i class="fa fa-youtube fa-fw"></i> <span class="network-name">Youtube</span></a>
                             </li>
                     </ul>
                 </div>
