Melhorias no texto Baixe Agora

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Baixe Agora!</h2>
-                    <p class="lead">Para baixar o jogo é só acessar o <a target="_blank" href="https://play.google.com/store/apps/details?id=com.saraceni.neverbrain">link para Playstore</a>.</p>
+                    <p class="lead">NeverBrain ainda está em fase de desenvolvimento. Mas para mostrar aos nossos usuários o que está por vir nós liberamos uma versão Beta na Playstore. Para baixar é só acessar o <a target="_blank" href="https://play.google.com/store/apps/details?id=com.saraceni.neverbrain">link para Playstore</a>. Estamos a abertos a novas idéias, feedbacks e sugestōes. Caso queria entrar em contato conosco envie um email para contato@neverbrain.com ou envie uma mensagem para nossa página no <a target="_blank" href="https://www.facebook.com/neverbrainapp/">Facebook</a>.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/phones.png" alt="">
