--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Never Brain</title>
+    <title>NeverBrain</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -53,7 +53,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand topnav" href="#">Never Brain</a>
+                <a class="navbar-brand topnav" href="#">NeverBrain</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -83,8 +83,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1>Never Brain</h1>
-                        <h3>Pelo prazer de explodir coisas.</h3>
+                        <h1>NeverBrain</h1>
+                        <h3>Mais do que um jogo, uma comunidade.</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
@@ -110,6 +110,24 @@
     <!-- Page Content -->
 
 	<a  name="services"></a>
+    
+    <div class="content-section-a">
+
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">Nossa Missão</h2>
+                    <p class="lead">Nossa missão é criar o jogo de nave mais divertido do mundo. Mas assim como toda grande ideia o NeverBrain não pode ser construído com um time pequeno, por isso nós precisamos da sua ajuda. NeverBrain é uma comunidade que busca criar a plataforma mais divertida do mundo feita por e para amantes de games de naves. A ideia é criar o game em conjunto com os nossos usuários ouvindo o feedback de vocês, suas ideias e propostas de melhorias para sabermos onde acertamos e onde erramos. Vamos melhorar continuamente e entregar o mais divertido game do mundo! Para entrar em contato conosco é só enviar um email para contato@neverbrain.com ou enviar uma mensagem na <a href="https://www.facebook.com/neverbrainapp/" target="_blank">nossa página no Facebook</a>. Fique a vontade para discutir sobre qualquer coisa: ideias, feedbacks, sugestões, propostas de melhoria ou simplesmente bater um papo sobre games. Precisamos da sua ajuda para juntos criarmos o jogo de nave mais divertido do mundo!</p>
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    
     <div class="content-section-a">
 
         <div class="container">
@@ -183,7 +201,7 @@
 
             <div class="row">
                 <div class="col-lg-6">
-                    <h2>Connecte-se conosco:</h2>
+                    <h2>Conecte-se conosco:</h2>
                 </div>
                 <div class="col-lg-6">
                     <ul class="list-inline banner-social-buttons">
